test/algeff/wrong/eff-rec2.kk.out
test/algeff/wrong/eff-rec2.kk(39,32): error: effects do not match
 context : fun main() : <exn,console> int {
 ...
 }
 term : {
 ...
 }
 inferred effect: <console,div,exn|_e>
 expected effect: <exn,console>